4 October 2021: Wouter
	- Fix to add example.conf note for outbound-msg-retry.

27 September 2021: Wouter
	- Implement RFC8375: Special-Use Domain 'home.arpa.'.

21 September 2021: Wouter
	- For crosscompile on windows, detect 64bit stackprotector library.
	- Fix crosscompile shell syntax.
	- Fix crosscompile windows to use libssp when it exists.
	- For the windows compile script disable gost.
	- Fix that on windows, use BIO_set_callback_ex instead of deprecated
	  BIO_set_callback.
	- Fix crosscompile script for the shared build flags.

20 September 2021: Wouter
	- Fix crosscompile on windows to work with openssl 3.0.0 the
	  link with ws2_32 needs -l:libssp.a for __strcpy_chk.
	  Also copy results from lib64 directory if needed.

10 September 2021: Wouter
	- Fix initialisation errors reported by gcc sanitizer.
	- Fix lock debug code for gcc sanitizer reports.
	- Fix more initialisation errors reported by gcc sanitizer.

8 September 2021: Wouter
	- Merged #41 from Moritz Schneider: made outbound-msg-retry
	  configurable.
	- Small fixes for #41: changelog, conflicts resolved,
	  processQueryResponse takes an iterator env argument like other
	  functions in the iterator, no colon in string for set_option,
	  and some whitespace style, to make it similar to the rest.
	- Fix for #41: change outbound retry to int to fix signed comparison
	  warnings.
	- Fix root_anchor test to check with new icannbundle date.

3 September 2021: Wouter
	- Fix #538: Fix subnetcache statistics.

1 September 2021: Wouter
	- Fix tcp fastopen failure when disabled, try normal connect instead.

27 August 2021: Wouter
	- Fix #533: Negative responses get cached even when setting
	  cache-max-negative-ttl: 1

25 August 2021: Wouter
	- Merge #401: RPZ triggers. This add additional RPZ triggers,
	  unbound supports a full set of rpz triggers, and this now
	  includes nsdname, nsip and clientip triggers. Also actions
	  are fully supported, and this now includes the tcp-only action.